2006-04-15  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpclipboard.c (gimp_clipboard_set_buffer): fix
	parameter name in API docs.

2006-04-15  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-utils.[ch]: added
	gimp_g_type_instance_get_memsize() and
	gimp_g_param_spec_get_memsize().
	Changed gimp_g_object_get_memsize() to use
	gimp_g_type_instance_get_memsize().
	Handle more boxed types in gimp_g_value_get_memsize().

	* app/core/gimp.c (gimp_get_memsize): add the memsize of some
	members that are new or were forgotten.

	* app/pdb/gimpprocedure.c
	* app/pdb/gimppluginprocedure.c: implement GimpObject::get_memsize().

2006-04-14  Manish Singh  <yosh@gimp.org>

	* app/plug-in/plug-in.h: Some compilers don't handle "'" in #error
	directives well. Reword to not use a contraction.

2006-04-13  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gif.c: code cleanup by Clarence Risher
	(bug #338002).

2006-04-13  Sven Neumann  <sven@gimp.org>

	* app/actions/file-actions.c: resolved conflicting mnemonic for
	the "Acquire" submenu.

2006-04-12  Karine Delvare  <edhel@gimp.org>

	* app/tools/gimpnewrectselecttool.c: auto-convert rectangle to
	selection after creating or reiszing it.

2006-04-12  Sven Neumann  <sven@gimp.org>

	* configure.in:  bumped version to 2.3.9.

2006-04-12  Sven Neumann  <sven@gimp.org>

	* Made 2.3.8 development release.

2006-04-12  Sven Neumann  <sven@gimp.org>

	* app/*.[ch]
	* app/*/*.[ch]: converted tabs to spaces.

2006-04-12  Sven Neumann  <sven@gimp.org>

	* libgimp*/gimp*.[ch]: converted tabs to spaces.

2006-04-12  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/lib.pl: create code with spaces instead of tabs.

	* libgimp/gimp*_pdb.[ch]: regenerated.

2006-04-12  Sven Neumann  <sven@gimp.org>

	* tools/gimp-remote.c
	* tools/kernelgen.c: converted tabs to spaces.

2006-04-12  Sven Neumann  <sven@gimp.org>

	* app/pdb/gimp-pdb.c (gimp_pdb_init_procs): removed profiling code.

2006-04-11  Carol Spears  <carol@gimp.org>
