@@ -1,3 +1,8 @@
+2006-04-18  Manish Singh  <yosh@gimp.org>
+
+	* app/core/gimpparamspecs.c: void functions should not try to return
+	values. Fixes bug #338792.
+
 2006-04-15  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpclipboard.c (gimp_clipboard_set_buffer): fix
